<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>dll</name>
  <version>1.0.0</version>
  <description>Direct Lidar Localization (DLL)</description>
  <maintainer email="fcaballero@us.es">Fernando Caballero</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>octomap_ros</build_depend>
  <build_depend>pcl_ros</build_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>octomap</exec_depend>
  <exec_depend>octomap_ros</exec_depend>
  <exec_depend>libpcl-all</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
